--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,20 @@
 title: folio # give your site a title
 email: you@example.com # put your email address in here; optional
 # edit your site description; keep it brief
-description: > Student page for ENG 7006
+description: > # this just means to ignore newlines until "baseurl:"
+  A simple blog and portfolio theme based in whitespace and Helvetica.
 baseurl:  # the subpath of your site, e.g. /blog/; if unsure, leave this blank
-url: http://HassanA85.github.io # replace [username] with your github username (no brackets)
-github_username: HassanA85 # replace with your github username
+url: http://[username].github.io # replace [username] with your github username (no brackets)
+github_username: github_username # replace with your github username
 
 ########################## DO NOT EDIT BELOW HERE UNLESS YOU'RE STOKED TO HACK
+# Build settings
+markdown: kramdown
+
+kramdown:
+  input: GFM
+
+#highlighter: rouge # this will cause a harmless error on github build; you can ignore it
 highlighter: pygments # this will break a local jekyll hosting situation without a lot of work
 
 # Pagination
