--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,13 @@
 ########################### EDIT YOUR SETTINGS HERE
 # Site settings
-title: "folio" # give your site a title
-email: "you@example.com" # put your email address in here; optional
+title: "Hassan's ENG 7006 Work Space" # give your site a title
+email: "em6097@wayne.edu" # put your email address in here; optional
 # edit your site description; keep it brief
-description: "A simple blog and portfolio theme based in whitespace and Helvetica."
-url: http://[username].github.io # replace [username] with your github username (no brackets)
-github_username: github_username # replace with your github username
+description: "Just another ENG 7006 student site"
+url: http://HassanA85.github.io # replace [username] with your github username (no brackets)
+github_username: HassanA85 # replace with your github username
 
 ########################## DO NOT EDIT BELOW HERE UNLESS YOU'RE STOKED TO HACK
-# Build settings
-markdown: kramdown
-
-kramdown:
-  input: GFM
-
 #highlighter: rouge # this will cause a harmless error on github build; you can ignore it
 highlighter: pygments # this will break a local jekyll hosting situation without a lot of work
 
