--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: "Hassan's ENG 7006 Work Space" # give your site a title
 email: "em6097@wayne.edu" # put your email address in here; optional
 # edit your site description; keep it brief
-description: "Just another ENG 7006 student site"
+description: "Bless this Mess"
 url: http://HassanA85.github.io # replace [username] with your github username (no brackets)
 github_username: HassanA85 # replace with your github username
 
